force-app/main/default/objects/HRCFSL_Subcomponent__c/HRCFSL_Subcomponent__c.object-meta.xml
<CustomObject>
    <label>Subcomponent</label>
    <nameField>
        <label>Subcomponent Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Subcomponents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>