force-app/main/default/objects/HRCFSL_Subcomponent__c/fields/HRCFSL_Asset__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_Asset__c</fullName>
    <label>Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Subcomponents</relationshipLabel>
    <relationshipName>Subcomponents</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>