force-app/main/default/objects/HRCFSL_Subcomponent__c/fields/HRCFSL_Install_Date__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_Install_Date__c</fullName>
    <label>Install Date</label>
    <type>Date</type>
</CustomField>