force-app/main/default/objects/HRCFSL_Subcomponent__c/fields/HRCFSL_Product__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Subcomponents</relationshipLabel>
    <relationshipName>Subcomponents</relationshipName>
    <type>Lookup</type>
</CustomField>