force-app/main/default/objects/HRCFSL_Subcomponent__c/fields/HRCSVC_Part_Number__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Part_Number__c</fullName>
    <description>Created as part of SE-66: This field represents Part Number which is the Product code from Product2</description>
    <formula>HRCFSL_Product__r.ProductCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Part Number</label>
    <type>Text</type>
</CustomField>