force-app/main/default/objects/HRCFSL_Subcomponent__c/fields/HRCSVC_Work_Order__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created as part of SE-66: This field is lookup to Work Order</description>
    <label>Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Subcomponents</relationshipLabel>
    <relationshipName>Subcomponents</relationshipName>
    <type>Lookup</type>
</CustomField>